<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    android:padding="20dp"
    >

   <!--TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Industrial Master"
       android:textSize="30sp"
       android:padding="10dp"
       android:textColor="@color/colorText"
       android:background="@color/colorAccent"
       android:elevation="10dp"


       />-->
   <ImageView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="5"
       android:src="@drawable/icon"
       android:scaleType="fitXY"
       />
   <TextView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:text="@string/username"
       android:gravity="center_vertical"
       android:textSize="14sp"
       />
   <EditText
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:hint="@string/username_hint"
       android:textSize="14sp"/>
   <TextView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:text="@string/password"
       android:gravity="center_vertical"
       android:textSize="14sp"
       />
   <EditText
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:hint="@string/password_hint"
       android:textSize="14sp"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal">
      <Button
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/reset"
          android:textColor="#fff"
          android:background="@color/colorText"
          android:textSize="24sp"
          />
      <Button
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/login"
          android:textColor="@color/lightPrimary"
          android:background="@color/colorAccent"
          android:textSize="24sp"
          android:onClick="login"
          />
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="vertical">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/donthaveaaccount"
          android:gravity="center"
          android:layout_marginTop="10dp"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/register"
          android:gravity="center"
          android:textSize="20sp"
          android:textColor="@color/colorAccent"
          android:clickable="true"
          android:textAllCaps="true"/>
   </LinearLayout>




</LinearLayout>